--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "build:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt build",
     "generate:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt generate"
   },
@@ -17,10 +18,10 @@
     "element-ui": "^2.7.0",
     "nuxt": "^2.4.0",
     "nuxt-element-ui": "^1.0.10",
-    "vuedraggable": "^2.20.0"
+    "vuedraggable": "^2.20.0",
+    "cross-env": "^5.2.0"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
     "nodemon": "^1.18.9"
   }
 }
